--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Node Socket.Io Chat</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <style>
       * { box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
+      .container{display: flex;}
+      button{float: right;}
+      #messages { list-style-type: none; }
       #messages li { padding: 15px 20px; }
-      #messages li:nth-child(odd) { background: #eee; margin-right: 0;}
+      #messages li:nth-child(odd) { background: #eee;}
       #messages { margin-bottom: 40px }
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+    <ul class="list-group" id="messages"></ul>
+    <form class="form-group" action="">
+      <div class="container">
+      <textarea id="message" class="form-control" autocomplete="off" /></textarea>
+      <button class="btn btn-primary">Send</button>
+  </div>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
@@ -25,12 +29,12 @@
       $(function () {
         var socket = io();
         $('form').submit(function(){
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
+          socket.emit('chat message', $('#message').val());
+          $('#message').val('');
           return false;
         });
         socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').text(msg));
+          $('#messages').append($('<li class="form-control-list">').text(msg));
           window.scrollTo(0, document.body.scrollHeight);
         });
       });
