Added Image Input

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
     <ul class="list-group" id="messages"></ul>
     <form class="form-group" action="">
       <div class="container">
-      <textarea id="message" class="form-control" autocomplete="off" /></textarea>
-      <button class="btn btn-primary">Send</button>
+      <textarea id="message" class="form-control"  /></textarea>
+      <input type="file" class="btn btn-default" accept="image/*" alt="Insert Image">
+      <input type="Submit" value="Send" class="btn btn-primary">
   </div>
     </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
