Minor UI Changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       input{margin: 0 auto;}
       ul{text-align: center; margin: 0 auto; }
       .error{color: red;}
+      .btn{margin-top: 10px;}
       .private{color: grey; font-style: italic;}
       #userWrap {text-align: center; margin: 0 auto; padding-top: 50px;}
       #messageWrap{ display: none;}
