Fixed Mobile Display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       .btn-private{margin:0; }
       #userWrap {text-align: center; margin: 0 auto; padding-top: 50px;}
       #messageWrap{ display: none;}
-      #userWrap { text-align: center;margin: 0 40px;  @media screen and (min-width: 640px){margin: 0 auto;}}
+      #userWrap { text-align: center; @media screen and (min-width: 640px){margin: 0 auto;}}
       #userError{color:red; height:15px;}
       #messages { list-style-type: none; }
       #messages li { padding: 15px 20px; }
